# SlideGenX

./: README.md  drafts.json  memory.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  test.ipynb
backend/src/: .gitignore  Makefile  drafts.json  final_slide.pptx  future_ai_healthcare.pptx  main.py  memory.json  presentation_ds.pptx  pyproject.toml  topic.txt
backend/src/api/: auth.py  slide.py
backend/src/artifacts/: artifact_21ea9d9a-a91b-4425-bea6-a1dd78fd609f_20250705_014405.json  artifact_66d17e40-b4ca-4c4a-b3c1-aa2837a3ddce_20250705_015438.json  artifact_cf4fa36a-c33c-4ada-8ea6-69192082f1c9_20250705_021039.json  artifact_e963f37f-07c9-4dfd-81dd-5e2a0e4f29ce_20250705_015029.json
backend/src/core/: auth.py  config.py
backend/src/core_ai/: Makefile  config.json  requirements.txt
backend/src/core_ai/finetune_diagram_agent/: README.md
backend/src/core_ai/finetune_diagram_agent/data/: train.jsonl
backend/src/core_ai/helpers/: llm_helper.py
backend/src/core_ai/icon-idea/file_embeddings/: embeddings.npy
backend/src/core_ai/libs/: __init__.py  config.py  main.py  slide.pptx
backend/src/core_ai/libs/agents/: utils.py
backend/src/core_ai/libs/agents/deep_research_agent/: __init__.py  agent.py
backend/src/core_ai/libs/agents/image_agent/: agent.py  (+1 more)
backend/src/core_ai/libs/core/: base_agent.py  session.py
backend/src/core_ai/libs/models/: outline_models.py  slide_models.py  visualization_models.py
backend/src/core_ai/libs/orchestration/: orchestrator.py  slide_edit_orchestrator.py
backend/src/core_ai/libs/utils/: merge_pptx.py  pptx2pdf.py
backend/src/core_ai/pptx_templates/: Blank.pptx  City-design.pptx  FIT-HCMUS_template.pptx  FIT.pptx  Futuristic.pptx  Geometric.pptx  Presentation2.pptx
backend/src/core_ai/searxng-data/: settings.yml
backend/src/crud/: crud_base.py  crud_slide.py  crud_user.py
backend/src/db/: session.py
backend/src/model/: slide.py  user.py
backend/src/reports/: final_report.md
backend/src/service/: auth.py  slide.py
backend/src/slides/: deep_learning.pptx
backend/src/util/: auth.py  common_function.py
(+143 files in other folders)
